# RestApi_Roket_test

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html.tera
