[package]
name = "rocket_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
tera = { version = "1", default-features = false }
[dependencies.rocket_contrib]
version = "0.4.4"
features = ["tera_templates"]